--- a/sucess.html
+++ b/sucess.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="CSS/style.css">
     <title>Contact Us Form</title>
     
 </head>
@@ -71,4 +71,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
