--- a/sucess.html
+++ b/sucess.html
@@ -68,8 +68,9 @@
             <p>Thanks for completing the form. We\'ll be in touch soon!</p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
